# sat-solver

./: Cargo.toml  Makefile  README.md  pandoc.css  runner.py  zprava.md
src/: clause.rs  heuristics.rs  main.rs  maybebool.rs  parsing.rs  tests.rs  var.rs
