[package]
name = "sat-solver"
version = "0.1.0"
authors = ["Martin Quarda <martin@quarda.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
itertools = "0.9"
structopt = "0.3"
priority-queue = "1.0.5"
